--- a/labs/03-lab/lab03.ipynb
+++ b/labs/03-lab/lab03.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -14,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +32,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -41,7 +39,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -50,14 +47,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
     "from collections import defaultdict\n",
     "from math import inf\n",
+    "import math\n",
     "import random\n",
     "import csv\n",
+    "from sklearn.cluster import KMeans\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
     "def get_centroid(points):\n",
     "    \"\"\"\n",
@@ -66,7 +67,18 @@
     "    \n",
     "    Returns a new point which is the center of all the points.\n",
     "    \"\"\"\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "    num_points = len(points)\n",
+    "    num_dimensions = len(points[0])\n",
+    "    center = [0] * num_dimensions\n",
+    "    \n",
+    "    for point in points:\n",
+    "        for i in range(num_dimensions):\n",
+    "            center[i] += point[i]\n",
+    "    \n",
+    "    for i in range(num_dimensions):\n",
+    "        center[i] /= num_points\n",
+    "#     print(center)\n",
+    "    return center\n",
     "\n",
     "def get_centroids(dataset, assignments):\n",
     "    \"\"\"\n",
@@ -75,7 +87,24 @@
     "    Compute the centroid for each of the assigned groups.\n",
     "    Return `k` centroids in a list\n",
     "    \"\"\"\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "    k = len(list(set(assignments)))\n",
+    "    num_dimensions = len(dataset[0])\n",
+    "    centroids = [[0] * num_dimensions for _ in range(k)]\n",
+    "    counts = [0] * k\n",
+    "    \n",
+    "    for i in range(len(dataset)):\n",
+    "        assigned_cluster = assignments[i]\n",
+    "        for j in range(num_dimensions):\n",
+    "            centroids[assigned_cluster][j] += dataset[i][j]\n",
+    "        counts[assigned_cluster] += 1\n",
+    "    \n",
+    "    for i in range(k):\n",
+    "        if counts[i] == 0:\n",
+    "            continue\n",
+    "        for j in range(num_dimensions):\n",
+    "            \n",
+    "            centroids[i][j] /= counts[i]\n",
+    "    return centroids\n",
     "\n",
     "def assign_points(data_points, centers):\n",
     "    \"\"\"\n",
@@ -84,6 +113,20 @@
     "    \"\"\"\n",
     "    #NOTE: i did this method for u guys so you can see an example of how \n",
     "    #these variables are used. You can change it if you want.\n",
+    "    assignments = []\n",
+    "    \n",
+    "    for point in data_points:\n",
+    "        min_distance = math.inf\n",
+    "        assigned_center = None\n",
+    "        \n",
+    "        for i, center in enumerate(centers):\n",
+    "            dis = distance(point, center)\n",
+    "            if dis < min_distance:\n",
+    "                min_distance = dis\n",
+    "                assigned_center = i\n",
+    "        \n",
+    "        assignments.append(assigned_center)\n",
+    "#     return assignments\n",
     "    return [min(range(len(centers)), key=lambda i: distance(point, centers[i])) for point in data_points]\n",
     "\n",
     "\n",
@@ -91,24 +134,33 @@
     "    \"\"\"\n",
     "    Returns the Euclidean distance between a and b\n",
     "    \"\"\"\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "    dist = np.sqrt(np.sum([(x-y)*(x-y) for x, y in zip(a, b)]))\n",
+    "    return dist\n",
     "\n",
     "def distance_squared(a, b):\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "    return np.sum([(x-y)*(x-y) for x, y in zip(a, b)])\n",
     "\n",
     "def cost_function(clustering):\n",
     "    \"\"\"\n",
     "    Accepts a clustering as a dictionary of lists of points.\n",
     "    Returns the cost of the clustering.\n",
     "    \"\"\"\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "    cost = 0\n",
+    "    \n",
+    "    for i, cluster in clustering.items():\n",
+    "        center = get_centroid(cluster)\n",
+    "        for point in cluster:\n",
+    "            dis = distance(point, center)\n",
+    "            cost += dis\n",
+    "    \n",
+    "    return cost\n",
     "\n",
     "def generate_k(dataset, k):\n",
     "    \"\"\"\n",
     "    Given `data_set`, which is an array of arrays,\n",
     "    return a random set of k points from the data_set\n",
     "    \"\"\"\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "    return random.sample(dataset, k)\n",
     "\n",
     "def generate_k_pp(dataset, k):\n",
     "    \"\"\"\n",
@@ -116,19 +168,34 @@
     "    return a random set of k points from the data_set\n",
     "    where points are picked with a probability proportional\n",
     "    to their distance as per kmeans pp\n",
+    "    \n",
     "    \"\"\"\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "    n = len(dataset)\n",
+    "    distances = np.zeros(n)\n",
+    "\n",
+    "    for i, point in enumerate(dataset):\n",
+    "        distances[i] = np.max([distance(point,c) for c in dataset])\n",
+    "#     print(distances.tolist())\n",
+    "    probabilities = distances / np.sum(distances)\n",
+    "    \n",
+    "    indices = np.random.choice(range(n), size=k, replace=True, p=probabilities)\n",
+    "    \n",
+    "    return [dataset[i] for i in indices]\n",
     "\n",
     "def _do_lloyds_algo(dataset, k_points):\n",
     "    assignments = assign_points(dataset, k_points)\n",
+    "#     print(assignments)\n",
     "    old_assignments = None\n",
     "    while assignments != old_assignments:\n",
     "        new_centers = get_centroids(dataset, assignments)\n",
     "        old_assignments = assignments\n",
+    "#         print(new_centers)\n",
     "        assignments = assign_points(dataset, new_centers)\n",
     "    clustering = defaultdict(list)\n",
+    "#     print(assignments)\n",
     "    for assignment, point in zip(assignments, dataset):\n",
     "        clustering[assignment].append(point)\n",
+    "#     print(clustering)\n",
     "    return clustering\n",
     "\n",
     "\n",
@@ -149,7 +216,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -157,7 +223,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -166,14 +231,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test_kmeans_when_k_is_1 passed!\n",
+      "test_kmeans_when_k_is_2 passed!\n",
+      "test_kmeans_when_k_is_3 passed!\n",
+      "test_kmeans_pp_when_k_is_2 passed!\n",
+      "test_kmeans_pp_when_k_is_3 passed!\n"
+     ]
+    }
+   ],
    "source": [
     "#DO NOT MODIFY THIS CELL!!!!\n",
     "\n",
     "import random\n",
-    "import read\n",
+    "# import read\n",
     "\n",
     "def clustered_all_points(clustering, dataset):\n",
     "    points = []\n",
@@ -186,13 +263,14 @@
     "\n",
     "\n",
     "def test_kmeans_when_k_is_1():\n",
-    "    datasetPath = \"../tests/test_files/dataset_1.csv\"\n",
+    "    datasetPath = \"tests/test_files/dataset_1.csv\"\n",
     "\n",
     "    random.seed(1)\n",
     "    dataset = read_csv(datasetPath)\n",
     "    expected_clustering = dataset\n",
+    "#     print(dataset)\n",
     "    clustering = k_means(dataset=dataset, k=1)\n",
-    "\n",
+    "#     print(len(clustering.keys()))\n",
     "    assert len(clustering.keys()) == 1\n",
     "    assert clustered_all_points(clustering, dataset) is True\n",
     "\n",
@@ -205,9 +283,9 @@
     "\n",
     "\n",
     "def test_kmeans_when_k_is_2():\n",
-    "    datasetPath = \"../tests/test_files/dataset_1.csv\"\n",
-    "    expected1 = \"../tests/test_files/dataset_1_k_is_2_0.csv\"\n",
-    "    expected2 = \"../tests/test_files/dataset_1_k_is_2_1.csv\"\n",
+    "    datasetPath = \"tests/test_files/dataset_1.csv\"\n",
+    "    expected1 = \"tests/test_files/dataset_1_k_is_2_0.csv\"\n",
+    "    expected2 = \"tests/test_files/dataset_1_k_is_2_1.csv\"\n",
     "\n",
     "    random.seed(1)\n",
     "    dataset = read_csv(datasetPath)\n",
@@ -236,10 +314,10 @@
     "\n",
     "\n",
     "def test_kmeans_when_k_is_3():\n",
-    "    datasetPath = \"../tests/test_files/dataset_1.csv\"\n",
-    "    expected1 = \"../tests/test_files/dataset_1_k_is_3_0.csv\"\n",
-    "    expected2 = \"../tests/test_files/dataset_1_k_is_3_1.csv\"\n",
-    "    expected3 = \"../tests/test_files/dataset_1_k_is_3_2.csv\"\n",
+    "    datasetPath = \"tests/test_files/dataset_1.csv\"\n",
+    "    expected1 = \"tests/test_files/dataset_1_k_is_3_0.csv\"\n",
+    "    expected2 = \"tests/test_files/dataset_1_k_is_3_1.csv\"\n",
+    "    expected3 = \"tests/test_files/dataset_1_k_is_3_2.csv\"\n",
     "    \n",
     "    random.seed(1)\n",
     "    dataset = read_csv(datasetPath)\n",
@@ -268,9 +346,9 @@
     "\n",
     "\n",
     "def test_kmeans_pp_when_k_is_2():\n",
-    "    datasetPath = \"../tests/test_files/dataset_1.csv\"\n",
-    "    expected1 = \"../tests/test_files/dataset_1_k_is_2_0.csv\"\n",
-    "    expected2 = \"../tests/test_files/dataset_1_k_is_2_1.csv\"\n",
+    "    datasetPath = \"tests/test_files/dataset_1.csv\"\n",
+    "    expected1 = \"tests/test_files/dataset_1_k_is_2_0.csv\"\n",
+    "    expected2 = \"tests/test_files/dataset_1_k_is_2_1.csv\"\n",
     "\n",
     "    dataset = read_csv(datasetPath)\n",
     "    expected_clustering1 = read_csv(expected1)\n",
@@ -296,10 +374,10 @@
     "    print(\"test_kmeans_pp_when_k_is_2 passed!\")\n",
     "\n",
     "def test_kmeans_pp_when_k_is_3():\n",
-    "    datasetPath = \"../tests/test_files/dataset_1.csv\"\n",
-    "    expected1 = \"../tests/test_files/dataset_1_k_is_3_0.csv\"\n",
-    "    expected2 = \"../tests/test_files/dataset_1_k_is_3_1.csv\"\n",
-    "    expected3 = \"../tests/test_files/dataset_1_k_is_3_2.csv\"\n",
+    "    datasetPath = \"tests/test_files/dataset_1.csv\"\n",
+    "    expected1 = \"tests/test_files/dataset_1_k_is_3_0.csv\"\n",
+    "    expected2 = \"tests/test_files/dataset_1_k_is_3_1.csv\"\n",
+    "    expected3 = \"tests/test_files/dataset_1_k_is_3_2.csv\"\n",
     "    \n",
     "    dataset = read_csv(datasetPath)\n",
     "    expected_clustering1 = read_csv(expected1)\n",
@@ -334,7 +412,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -342,7 +419,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -355,7 +431,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -364,25 +439,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from scipy.spatial.distance import jaccard\n",
+    "from scipy.spatial.distance import pdist\n",
     "def euclidean_dist(x, y):\n",
-    "    return NotImplementedError(\"Implement this method\")\n",
+    "    x = np.array(x)\n",
+    "    y = np.array(y)\n",
+    "    dist = np.linalg.norm(x - y)\n",
+    "    return dist\n",
     "\n",
     "def manhattan_dist(x, y):\n",
-    "    return NotImplementedError(\"Implement this method\")\n",
+    "    return sum(map(lambda i, j: abs(i-j), x, y))\n",
     "\n",
     "def jaccard_dist(x, y):\n",
-    "    return NotImplementedError(\"Implement this method\")\n",
+    "    if len(x) == 0:\n",
+    "        return False\n",
+    "    p = 0\n",
+    "    q = 0\n",
+    "    for i in range(len(x)):\n",
+    "        if x[i] != y[i]:\n",
+    "            p += 1\n",
+    "        else:\n",
+    "            q += 1\n",
+    "    return float(p) / (p+q)\n",
     "\n",
     "def cosine_sim(x, y):\n",
-    "    return NotImplementedError(\"Implement this method\")"
+    "    if len(x) != len(y):\n",
+    "        return False\n",
+    "    d1=np.dot(x,y)/(np.linalg.norm(x)*np.linalg.norm(y))\n",
+    "    return d1"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -393,9 +484,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "euclidean_dist is right!\n",
+      "manhattan_dist is right!\n",
+      "cosine_sim is right!\n",
+      "jaccard_dist is right!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/lijiahang/opt/anaconda3/envs/qagnn/lib/python3.7/site-packages/ipykernel_launcher.py:27: RuntimeWarning: invalid value encountered in true_divide\n"
+     ]
+    }
+   ],
    "source": [
     "def _generate_rand_point(dimension):\n",
     "    return [random.randrange(1, 1000, 1) for i in range(dimension)]\n",
@@ -505,11 +614,18 @@
     "test_cosine()\n",
     "test_jaccard()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -523,9 +639,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.7.11"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "63639127d0784e8e4de1a76bcacd89583be09d9f82d600966cd9457d183cbbf7"
