--- a/worksheets/worksheet_05.ipynb
+++ b/worksheets/worksheet_05.ipynb
@@ -7,8 +7,8 @@
    "source": [
     "# Worksheet 05\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name:  Zhengxu Wang  \n",
+    "UID: U81066856\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -27,9 +27,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "K-means and K-means++ is the way that the initial cluster centers are chosen. K-means initializes the cluster centers randomly, while K-means++ chooses them in a way that ensures that they are well-separated from each other and distributed throughout the data. As a result, K-means++ often produces better quality clusters than K-means."
+   ]
   },
   {
    "attachments": {},
@@ -40,9 +43,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Assumes Spherical Clusters, not so good when facing other shape of clusters. It may not always be the best clustering algorithm for every problem."
+   ]
   },
   {
    "attachments": {},
@@ -74,9 +80,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Either k=2 and 3 is good enough, because the Silhouette Scores is higher than other 2."
+   ]
   },
   {
    "attachments": {},
@@ -108,54 +117,65 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Step 1\n",
-    "\n",
-    "|   | A | B | C | D | E |\n",
-    "|---|---|---|---|---|---|\n",
-    "| A | 0 |   |   |   |   |\n",
-    "| B |   | 0 |   |   |   |\n",
-    "| C |   |   | 0 |   |   |\n",
-    "| D |   |   |   | 0 |   |\n",
-    "| E |   |   |   |   | 0 |"
+    "Single linkage uses the distance between the closest points in each cluster, while complete linkage uses the distance between the farthest points."
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Step 1\n",
+    "\n",
+    "|     | A          | B          | C           | D           | E          |\n",
+    "|-----|------------|------------|-------------|-------------|------------|\n",
+    "| A   | 0          | $\\sqrt{2}$ | 3           | 1           | $\\sqrt{8}$ |\n",
+    "| B   | $\\sqrt{2}$ | 0          | $\\sqrt{5}$  | 1           | $\\sqrt{2}$ |\n",
+    "| C   | 3          | $\\sqrt{5}$ | 0           | $\\sqrt{10}$ | $\\sqrt{5}$ |\n",
+    "| D   | 1          | 1          | $\\sqrt{10}$ | 0           | $\\sqrt{5}$ |\n",
+    "| E   | $\\sqrt{8}$ | $\\sqrt{2}$ | $\\sqrt{5}$  | $\\sqrt{5}$  | 0          |"
+   ]
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Step 2\n",
     "\n",
-    "|   |   |   |   |   |\n",
-    "|---|---|---|---|---|\n",
-    "|   | 0 |   |   |   |\n",
-    "|   |   | 0 |   |   |\n",
-    "|   |   |   | 0 |   |\n",
-    "|   |   |   |   | 0 |"
+    "|     | AD  | B          | C   | E          |\n",
+    "|-----|-----|------------|-----|------------|\n",
+    "| AD  | 0   | 1          | 3   | $\\sqrt{5}$ |\n",
+    "| B   | 1   | 0          |  $\\sqrt{5}$   | $\\sqrt{2}$ |\n",
+    "| C   | 3   | $\\sqrt{5}$ | 0   |    $\\sqrt{5}$        |\n",
+    "| E   |   $\\sqrt{5}$  | $\\sqrt{2}$ |  $\\sqrt{5}$   | 0          |"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Step 3\n",
     "\n",
-    "|   |   |   |   |\n",
-    "|---|---|---|---|\n",
-    "|   | 0 |   |   |\n",
-    "|   |   | 0 |   |\n",
-    "|   |   |   | 0 |"
+    "|     | ABD        | C   | E          |\n",
+    "|-----|------------|-----|------------|\n",
+    "| ABD | 0          |  $\\sqrt{5}$   | $\\sqrt{2}$ |\n",
+    "| C   | $\\sqrt{5}$ | 0   |    $\\sqrt{5}$        |\n",
+    "| E   | $\\sqrt{2}$ |   $\\sqrt{5}$  | 0          |"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Step 4\n",
     "\n",
-    "|   |   |   |\n",
-    "|---|---|---|\n",
-    "|   | 0 |   |\n",
-    "|   |   | 0 |"
+    "|      | ABDE | C   |\n",
+    "|------|------|-----|\n",
+    "| ABDE | 0    |  $\\sqrt{5}$   |\n",
+    "| C    | $\\sqrt{5}$     | 0   |"
    ]
   },
   {
@@ -169,57 +189,61 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Step 1\n",
     "\n",
-    "|   | A | B | C | D | E |\n",
-    "|---|---|---|---|---|---|\n",
-    "| A | 0 |   |   |   |   |\n",
-    "| B |   | 0 |   |   |   |\n",
-    "| C |   |   | 0 |   |   |\n",
-    "| D |   |   |   | 0 |   |\n",
-    "| E |   |   |   |   | 0 |"
+    "|     | A          | B          | C           | D           | E          |\n",
+    "|-----|------------|------------|-------------|-------------|------------|\n",
+    "| A   | 0          | $\\sqrt{2}$ | 3           | 1           | $\\sqrt{8}$ |\n",
+    "| B   | $\\sqrt{2}$ | 0          | $\\sqrt{5}$  | 1           | $\\sqrt{2}$ |\n",
+    "| C   | 3          | $\\sqrt{5}$ | 0           | $\\sqrt{10}$ | $\\sqrt{5}$ |\n",
+    "| D   | 1          | 1          | $\\sqrt{10}$ | 0           | $\\sqrt{5}$ |\n",
+    "| E   | $\\sqrt{8}$ | $\\sqrt{2}$ | $\\sqrt{5}$  | $\\sqrt{5}$  | 0          |"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Step 2\n",
     "\n",
-    "|   |   |   |   |   |\n",
-    "|---|---|---|---|---|\n",
-    "|   | 0 |   |   |   |\n",
-    "|   |   | 0 |   |   |\n",
-    "|   |   |   | 0 |   |\n",
-    "|   |   |   |   | 0 |"
+    "|     | AD   | B    | C    | E    |\n",
+    "|-----|------|------|------|------|\n",
+    "| AD  | 0    | 2.41 | 6.16 | 5.06 |\n",
+    "| B   | 2.41 | 0    | 2.24 | 1.41 |\n",
+    "| C   | 6.16 | 2.24 | 0    | 2.24 |\n",
+    "| E   | 5.06 | 1.41 | 2.24 | 0    |"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Step 3\n",
     "\n",
-    "|   |   |   |   |\n",
-    "|---|---|---|---|\n",
-    "|   | 0 |   |   |\n",
-    "|   |   | 0 |   |\n",
-    "|   |   |   | 0 |"
+    "|     | ADB  | C    | E    |\n",
+    "|-----|------|------|------|\n",
+    "| ADB | 0    | 8.4  | 6.47 |\n",
+    "| C   | 8.4  | 0    | 2.24 |\n",
+    "| E   | 6.47 | 2.24 | 0    |"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Step 4\n",
     "\n",
-    "|   |   |   |\n",
-    "|---|---|---|\n",
-    "|   | 0 |   |\n",
-    "|   |   | 0 |"
+    "|     | ADB   | CE    |\n",
+    "|-----|-------|-------|\n",
+    "| ADB | 0     | 14.87 |\n",
+    "| CE  | 14.87 | 0     |"
    ]
   }
  ],
@@ -231,12 +255,12 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.11.1"
+   "version": "3.9.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "76ca05dc3ea24b2e3b98cdb7774adfbb40773424bf5109b477fd793f623715af"
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
    }
   }
  },
