--- a/worksheets/worksheet_05.ipynb
+++ b/worksheets/worksheet_05.ipynb
@@ -7,8 +7,8 @@
    "source": [
     "# Worksheet 05\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name:  Yuanyuan Wang    \n",
+    "UID: U26234904\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -29,7 +29,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Though K means starts randomly with centroid initializations, K means ++ starts with a random centroid and takes into account the distance to the next centroid that is chosen."
+   ]
   },
   {
    "attachments": {},
@@ -42,7 +44,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Clusters of varying densities can be split up. Clusters that don't have a circular shape will get split up and/or incorrectly included to a different cluster."
+   ]
   },
   {
    "attachments": {},
@@ -76,7 +80,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "I choose K = 2 clusters, cuz it seems like the silhouette scores for those 2 clusters meet a better standard than the the other three."
+   ]
   },
   {
    "attachments": {},
