--- a/labs/03-lab/lab03.ipynb
+++ b/labs/03-lab/lab03.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,12 +50,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "from collections import defaultdict\n",
-    "from math import inf\n",
+    "from math import inf, sqrt\n",
     "import random\n",
     "import csv\n",
     "\n",
@@ -66,7 +66,14 @@
     "    \n",
     "    Returns a new point which is the center of all the points.\n",
     "    \"\"\"\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "\n",
+    "    num_points = len(points)\n",
+    "    num_dimensions = len(points[0])\n",
+    "    centroid=[]\n",
+    "    for dimension in range(num_dimensions):\n",
+    "        sum_dim = sum(point[dimension] for point in points)\n",
+    "        centroid.append(sum_dim/num_points)\n",
+    "    return centroid\n",
     "\n",
     "def get_centroids(dataset, assignments):\n",
     "    \"\"\"\n",
@@ -75,7 +82,14 @@
     "    Compute the centroid for each of the assigned groups.\n",
     "    Return `k` centroids in a list\n",
     "    \"\"\"\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "    clusters = defaultdict(list)\n",
+    "    for i, assignment in enumerate(assignments):\n",
+    "        clusters[assignment].append(dataset[i])\n",
+    "    centroids = []\n",
+    "    for cluster in clusters.values():\n",
+    "        centroids.append(get_centroid(cluster))\n",
+    "\n",
+    "    return centroids\n",
     "\n",
     "def assign_points(data_points, centers):\n",
     "    \"\"\"\n",
@@ -91,24 +105,29 @@
     "    \"\"\"\n",
     "    Returns the Euclidean distance between a and b\n",
     "    \"\"\"\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "    return sqrt(sum([(a[i] - b[i]) ** 2 for i in range(len(a))]))\n",
     "\n",
     "def distance_squared(a, b):\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "    return sum([(a[i] - b[i]) ** 2 for i in range(len(a))])\n",
     "\n",
     "def cost_function(clustering):\n",
     "    \"\"\"\n",
     "    Accepts a clustering as a dictionary of lists of points.\n",
     "    Returns the cost of the clustering.\n",
     "    \"\"\"\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "    cost = 0\n",
+    "    for cluster, points in clustering.items():\n",
+    "        centroid = get_centroid(points)\n",
+    "        for point in points:\n",
+    "            cost += distance(point, centroid) ** 2\n",
+    "    return cost\n",
     "\n",
     "def generate_k(dataset, k):\n",
     "    \"\"\"\n",
     "    Given `data_set`, which is an array of arrays,\n",
     "    return a random set of k points from the data_set\n",
     "    \"\"\"\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "    return random.sample(dataset,k)\n",
     "\n",
     "def generate_k_pp(dataset, k):\n",
     "    \"\"\"\n",
@@ -117,7 +136,13 @@
     "    where points are picked with a probability proportional\n",
     "    to their distance as per kmeans pp\n",
     "    \"\"\"\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "    centers = [random.choice(dataset)]\n",
+    "    while len(centers) < k:\n",
+    "        distances = [min(distance_squared(point, center) for center in centers) for point in dataset]\n",
+    "        probabilities = [distance ** 2 / sum(distances) for distance in distances]\n",
+    "        centers.append(random.choices(dataset, weights=probabilities, k=1)[0])\n",
+    "    return centers\n",
+    "\n",
     "\n",
     "def _do_lloyds_algo(dataset, k_points):\n",
     "    assignments = assign_points(dataset, k_points)\n",
@@ -166,9 +191,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test_kmeans_when_k_is_1 passed!\n",
+      "test_kmeans_when_k_is_2 passed!\n",
+      "test_kmeans_when_k_is_3 passed!\n",
+      "test_kmeans_pp_when_k_is_2 passed!\n",
+      "test_kmeans_pp_when_k_is_3 passed!\n"
+     ]
+    }
+   ],
    "source": [
     "#DO NOT MODIFY THIS CELL!!!!\n",
     "\n",
@@ -366,21 +403,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "def euclidean_dist(x, y):\n",
-    "    return NotImplementedError(\"Implement this method\")\n",
+    "    return sqrt(sum([(x[i] - y[i]) ** 2 for i in range(len(x))]))\n",
     "\n",
     "def manhattan_dist(x, y):\n",
-    "    return NotImplementedError(\"Implement this method\")\n",
+    "    return sum([abs(x[i] - y[i]) for i in range(len(x))])\n",
     "\n",
     "def jaccard_dist(x, y):\n",
-    "    return NotImplementedError(\"Implement this method\")\n",
+    "    if len(x) == 0 and len(y) == 0:\n",
+    "        return 0\n",
+    "    intersection = len(set(x).intersection(set(y)))\n",
+    "    union = len(set(x).union(set(y)))\n",
+    "    return 1 - (intersection / union)\n",
     "\n",
     "def cosine_sim(x, y):\n",
-    "    return NotImplementedError(\"Implement this method\")"
+    "    if len(x) != len(y):\n",
+    "        raise ValueError(\"lengths must be equal\")\n",
+    "    if len(x) == 0 or len(y) == 0:\n",
+    "        raise ValueError(\"lengths must not be zero\")\n",
+    "    dot_product = sum([x[i] * y[i] for i in range(len(x))])\n",
+    "    norm_x = sqrt(sum([i**2 for i in x]))\n",
+    "    norm_y = sqrt(sum([i**2 for i in y]))\n",
+    "    return dot_product / (norm_x * norm_y)"
    ]
   },
   {
@@ -395,9 +443,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "euclidean_dist is right!\n",
+      "manhattan_dist is right!\n",
+      "cosine_sim is right!\n",
+      "jaccard_dist is right!\n"
+     ]
+    }
+   ],
    "source": [
     "def _generate_rand_point(dimension):\n",
     "    return [random.randrange(1, 1000, 1) for i in range(dimension)]\n",
@@ -525,12 +584,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "63639127d0784e8e4de1a76bcacd89583be09d9f82d600966cd9457d183cbbf7"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
