--- a/worksheets/worksheet_05.ipynb
+++ b/worksheets/worksheet_05.ipynb
@@ -7,8 +7,8 @@
    "source": [
     "# Worksheet 05\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name: Tianyi Bao\n",
+    "UID: U89641075\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -27,9 +27,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "K-means partitions data into K clusters by iteratively assigning data points to the nearest cluster centroid, then updating the centroid based on the mean of the data points in that cluster.\n",
+    "K-means++ is an improvement over K-means by choosing the initial centroids that are well-separated from each other, which will have better clustering results K-means.\n"
+   ]
   },
   {
    "attachments": {},
@@ -40,9 +44,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "K-means++ assumes that the data distribution is isotropic, meaning that the data points have equal variance in all directions. \n",
+    "\n",
+    "K-means++ is not guaranteed to find the globally optimal clustering solution. "
+   ]
   },
   {
    "attachments": {},
@@ -74,9 +83,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "I would choose the one where K = 2 or 3. The silhouette score for each cluster is above the average score over the entire dataset. Also the size for each cluster are more evenly distributed."
+   ]
   },
   {
    "attachments": {},
@@ -112,50 +124,53 @@
     "\n",
     "|   | A | B | C | D | E |\n",
     "|---|---|---|---|---|---|\n",
-    "| A | 0 |   |   |   |   |\n",
-    "| B |   | 0 |   |   |   |\n",
-    "| C |   |   | 0 |   |   |\n",
-    "| D |   |   |   | 0 |   |\n",
-    "| E |   |   |   |   | 0 |"
+    "| A | 0 |$\\sqrt2$| 3 |1 |2 $\\sqrt2$|\n",
+    "| B |$\\sqrt2$| 0 |$\\sqrt5$|1|$\\sqrt2$|\n",
+    "| C | 3 |$\\sqrt5$| 0 |$\\sqrt10$|$\\sqrt5$|\n",
+    "| D | 1 |1|$\\sqrt10$| 0 |$\\sqrt5$|\n",
+    "| E |2 $\\sqrt2$|$\\sqrt2$|$\\sqrt5$|$\\sqrt5$| 0 |"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Step 2\n",
     "\n",
-    "|   |   |   |   |   |\n",
+    "|   |A&D| B | C | E |\n",
     "|---|---|---|---|---|\n",
-    "|   | 0 |   |   |   |\n",
-    "|   |   | 0 |   |   |\n",
-    "|   |   |   | 0 |   |\n",
-    "|   |   |   |   | 0 |"
+    "|A&D| 0 |1  |3  |$\\sqrt5$   |\n",
+    "| B |1  | 0 |$\\sqrt5$|$\\sqrt2$|\n",
+    "| C |3  |$\\sqrt5$| 0 |$\\sqrt5$|\n",
+    "| E |$\\sqrt5$   |$\\sqrt2$|$\\sqrt5$| 0 |"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Step 3\n",
     "\n",
-    "|   |   |   |   |\n",
+    "|   |A&D&B| C | E |\n",
     "|---|---|---|---|\n",
-    "|   | 0 |   |   |\n",
-    "|   |   | 0 |   |\n",
-    "|   |   |   | 0 |"
+    "|A&D&B| 0 |$\\sqrt5$|$\\sqrt2$|\n",
+    "| C |$\\sqrt5$| 0 |$\\sqrt5$|\n",
+    "| E |$\\sqrt2$|$\\sqrt5$| 0 |"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Step 4\n",
     "\n",
-    "|   |   |   |\n",
+    "|   |A&D&B&E|C|\n",
     "|---|---|---|\n",
-    "|   | 0 |   |\n",
-    "|   |   | 0 |"
+    "|A&D&B&E| 0 |$\\sqrt5$|\n",
+    "| c |$\\sqrt5$| 0 |"
    ]
   },
   {
@@ -169,6 +184,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -176,50 +192,53 @@
     "\n",
     "|   | A | B | C | D | E |\n",
     "|---|---|---|---|---|---|\n",
-    "| A | 0 |   |   |   |   |\n",
-    "| B |   | 0 |   |   |   |\n",
-    "| C |   |   | 0 |   |   |\n",
-    "| D |   |   |   | 0 |   |\n",
-    "| E |   |   |   |   | 0 |"
+    "| A | 0 |$\\sqrt2$| 3 |1 |2 $\\sqrt2$|\n",
+    "| B |$\\sqrt2$| 0 |$\\sqrt5$|1|$\\sqrt2$|\n",
+    "| C | 3 |$\\sqrt5$| 0 |$\\sqrt10$|$\\sqrt5$|\n",
+    "| D | 1 |1|$\\sqrt10$| 0 |$\\sqrt5$|\n",
+    "| E |2 $\\sqrt2$|$\\sqrt2$|$\\sqrt5$|$\\sqrt5$| 0 |"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Step 2\n",
     "\n",
-    "|   |   |   |   |   |\n",
+    "|   |A&D| B | C | E |\n",
     "|---|---|---|---|---|\n",
-    "|   | 0 |   |   |   |\n",
-    "|   |   | 0 |   |   |\n",
-    "|   |   |   | 0 |   |\n",
-    "|   |   |   |   | 0 |"
+    "|A&D| 0|$\\sqrt2$|$\\sqrt10$|2 $\\sqrt2$|\n",
+    "| B |$\\sqrt2$| 0 |$\\sqrt5$|$\\sqrt2$|\n",
+    "| C |$\\sqrt10$|$\\sqrt5$| 0 |$\\sqrt5$|\n",
+    "| E |2 $\\sqrt2$|$\\sqrt2$|$\\sqrt5$| 0 |"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Step 3\n",
     "\n",
-    "|   |   |   |   |\n",
+    "|   |A&D&B| C | E |\n",
     "|---|---|---|---|\n",
-    "|   | 0 |   |   |\n",
-    "|   |   | 0 |   |\n",
-    "|   |   |   | 0 |"
+    "|A&D&B| 0 |$\\sqrt10$|2 $\\sqrt2$|\n",
+    "| C |$\\sqrt10$| 0 |$\\sqrt5$|\n",
+    "| E |2 $\\sqrt2$|$\\sqrt5$| 0 |"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Step 4\n",
     "\n",
-    "|   |   |   |\n",
+    "|   |A&D&B&E|C|\n",
     "|---|---|---|\n",
-    "|   | 0 |   |\n",
-    "|   |   | 0 |"
+    "|A&D&B&E| 0 |$\\sqrt10$|\n",
+    "| c |$\\sqrt10$| 0 |"
    ]
   }
  ],
@@ -231,12 +250,12 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.11.1"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "76ca05dc3ea24b2e3b98cdb7774adfbb40773424bf5109b477fd793f623715af"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
